public class ChanceCardGetOutOfJail extends ChanceCard{


    public ChanceCardGetOutOfJail(String chanceCardText) {
        super(chanceCardText);
    }
}
