public class FieldGoToJail extends Field{

    public FieldGoToJail(String name, String FieldType){
        super(name,FieldType);
    }

    public String toString(){
        return this.name + " could be your worst nightmare :o ";
    }
}
