import java.io.IOException;

public class Main1 {
    public static void main(String[] args) throws IOException {
        Gamehandler game = new Gamehandler();
        game.playGame();
    }


}
