@startuml

title __GAMEASSIGNMENT's Class Diagram__\n

  namespace  {
    class Board {
    }
  }
  

  namespace  {
    abstract class ChanceCard {
    }
  }
  

  namespace  {
    class ChanceCardDeck {
    }
  }
  

  namespace  {
    class ChanceCardGetOutOfJail {
    }
  }
  

  namespace  {
    class ChanceCardMatadorGrant {
    }
  }
  

  namespace  {
    class ChanceCardMove {
    }
  }
  

  namespace  {
    class ChanceCardPayBasedOnProperty {
    }
  }
  

  namespace  {
    class ChanceCardPayOrReceive {
    }
  }
  

  namespace  {
    class ChanceCardReceiveMoneyFromPlayers {
    }
  }
  

  namespace  {
    class Die {
    }
  }
  

  namespace  {
    abstract class Field {
    }
  }
  

  namespace  {
    class FieldBeverage {
    }
  }
  

  namespace  {
    class FieldChance {
    }
  }
  

  namespace  {
    class FieldDeed {
    }
  }
  

  namespace  {
    class FieldFerry {
    }
  }
  

  namespace  {
    class FieldGoToJail {
    }
  }
  

  namespace  {
    class FieldJail {
    }
  }
  

  namespace  {
    class FieldParking {
    }
  }
  

  namespace  {
    abstract class FieldPurchaseAble {
    }
  }
  

  namespace  {
    class FieldStart {
    }
  }
  

  namespace  {
    class FieldTax {
    }
  }
  

  namespace  {
    class GUIController {
    }
  }
  

  namespace  {
    class GUI_Playerex {
    }
  }
  

  namespace  {
    class Gamehandler {
    }
  }
  

  namespace  {
    class Main1 {
    }
  }
  

  namespace  {
    class Player {
    }
  }
  

  namespace  {
    class Rafflecup {
    }
  }
  

  namespace  {
    class Settings {
    }
  }
  

  namespace  {
    class TxtReader {
    }
  }
  

  Board o-- ChanceCardDeck : myDeck
  Board o-- TxtReader : reader
  ChanceCardGetOutOfJail -up-|> ChanceCard
  ChanceCardMatadorGrant -up-|> ChanceCard
  ChanceCardMove -up-|> ChanceCard
  ChanceCardPayBasedOnProperty -up-|> ChanceCard
  ChanceCardPayOrReceive -up-|> ChanceCard
  ChanceCardReceiveMoneyFromPlayers -up-|> ChanceCard
  Field o-- Board : parent
  FieldBeverage -up-|> FieldPurchaseAble
  FieldChance -up-|> Field
  FieldDeed -up-|> FieldPurchaseAble
  FieldFerry -up-|> FieldPurchaseAble
  FieldGoToJail -up-|> Field
  FieldJail -up-|> Field
  FieldParking -up-|> Field
  FieldPurchaseAble -up-|> Field
  FieldPurchaseAble o-- Player : owner
  FieldStart -up-|> Field
  FieldTax -up-|> Field
  GUI_Playerex -up-|> gui_fields.GUI_Player
  GUI_Playerex o-- Player : player
  Gamehandler o-- GUIController : controller
  Gamehandler o-- Board : myboard
  Gamehandler o-- Rafflecup : rafflecup


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
